--- a/web/student/assets/css/main.css
+++ b/web/student/assets/css/main.css
@@ -42,9 +42,11 @@ body, html {
     text-align: center;
     margin-bottom: 10px;
 }
-
+h1 {
+    font-size: 64px;  
+}
 .header h1 {
-    font-size: 64px;
+    font-size: 48px;
 }
 
 /* 
@@ -75,21 +77,32 @@ body, html {
 .current-count-div {
     float: left;
     text-align: center;
-    width: 47.5%;
+    width: 32%;
     height: 100%;
     /* border: 1px solid #f1f1f1; */
     padding-top: 5px;
-    margin-right: 2.5%;
+    margin-right: 1%;
+}
+
+.ta-count-div {
+    float: left;
+    text-align: center;
+    width: 32%;
+    height: 100%;
+    /* border: 1px solid #f1f1f1; */
+    padding-top: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .stats-div {
     float: left;
-    width: 47.5%;
+    width: 32%;
     height: 100%;
     text-align: center;
     /* border: 1px solid #f1f1f1; */
     padding-top: 5px;
-    margin-left: 2.5%;
+    margin-left: 1%;
 }
 
 .pop-times-div {
